use annotation-based jackson deserialization
(requires reflect-config.json for native-image generation)